--- a/market_allocation.ipynb
+++ b/market_allocation.ipynb
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,13 +417,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ChosingPortifolio (data):\n",
+    "def ChosingOnePortifolio (n_assets, data):\n",
+    "    #Randomly generating W\n",
+    "    W = np.zeros(n_assets)\n",
+    "    W[0] = np.random.uniform(0,1,1)\n",
+    "    for i in np.arange(1,n_assets-1):\n",
+    "        W[i] = np.random.uniform(0,1-np.sum(W[:i]))\n",
+    "    W[-1] = 1 - np.sum(W[:-1])\n",
+    "    \n",
+    "    Portifolio = np.sum(W*data, axis=1)\n",
+    "    \n",
+    "    #Log-Result\n",
+    "    pot_returns = np.log(Portifolio/Portifolio.shift(1))\n",
+    "    pot_returns.dropna(inplace=True)\n",
+    "    \n",
+    "    var = Var_hill(pot_returns, 60)\n",
+    "    expected_return = np.mean(pot_returns)\n",
+    "    return W, var, var/expected_return\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ChosingPortifolio (n_assets, data):\n",
+    "    '''\n",
+    "    This function will distribute weights and create differents portfolios\n",
+    "    And then return the one that minimizes the relation Var/return\n",
+    "    '''\n",
+    "    m = 500\n",
+    "    All_vars,All_relations = np.zeros(m),np.zeros(m)\n",
+    "    All_weights = []\n",
+    "    \n",
+    "    for i in np.arange(m):\n",
+    "        w, All_vars[i],All_relations[i] = ChosingOnePortifolio(n_assets, data)\n",
+    "        All_weights.append(w)\n",
+    "    \n",
+    "    Min_relations = min(All_relations)\n",
+    "    ind, = np.where(All_relations == Min_relations)\n",
+    "    ind = ind[0]\n",
+    "    return All_weights[ind], All_vars[ind] ,All_relations[ind]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_assets = 3\n",
+    "W = np.zeros(n_assets)\n",
+    "W[0] = np.random.uniform(0,1,1)\n",
+    "for i in np.arange(1,n_assets-1):\n",
+    "    W[i] = np.random.uniform(0,1-np.sum(W[:i]))\n",
+    "W[-1] = 1 - np.sum(W[:-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.01441091, 0.16617019, 0.8194189 ]),\n",
+       " 0.18327143866253315,\n",
+       " 360.15241405134543)"
+      ]
+     },
+     "execution_count": 236,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ChosingPortifolio(3, data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
